# audio-transcribe

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
api/: data.py  main.py
audio-transcribe/: gpt.py  whisper.py
audio_transcribe/: __init__.py  gpt.py  whisper.py
